Removed rows from taxi data with a trip distance of 0

--- a/taxi_clean.ipynb
+++ b/taxi_clean.ipynb
@@ -424,6 +424,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2657b553-7da5-44f8-bebf-a7b31ca555f7",
+   "metadata": {},
+   "source": [
+    "## Remove Invalid Rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf4f18e3-2c25-4b29-bd31-789bb865beed",
+   "metadata": {},
+   "source": [
+    "Remove rows where the `trip_distance` is 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "93c9e0a0-3e2e-4243-96ba-33574a311372",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove 3455 rows with a trip_distance of 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Remove ' + str(len(df[df['trip_distance'] == 0])) + ' rows with a trip_distance of 0')\n",
+    "df = df[df['trip_distance'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "81659acb-9c1d-446b-a7e1-b50a3adb5dc5",
    "metadata": {},
    "source": [
@@ -443,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "92e38095-17f8-4166-9b3b-e164d2074b0d",
    "metadata": {},
    "outputs": [
@@ -578,7 +613,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>83691 rows × 6 columns</p>\n",
+       "<p>80236 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -608,10 +643,10 @@
        "83689            7         1920.0  \n",
        "83690            7         1560.0  \n",
        "\n",
-       "[83691 rows x 6 columns]"
+       "[80236 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +655,7 @@
     "df['day_of_week'] = df['lpep_pickup_datetime'].dt.dayofweek\n",
     "df['day_of_month'] = df['lpep_pickup_datetime'].dt.day\n",
     "df['hour_of_day'] = df['lpep_pickup_datetime'].dt.hour\n",
-    "df['trip_duration'] = (df['lpep_dropoff_datetime'] - df['lpep_pickup_datetime']).dt.total_seconds()\n",
+    "df['trip_duration'] = round((df['lpep_dropoff_datetime'] - df['lpep_pickup_datetime']).dt.total_seconds())\n",
     "df[['lpep_pickup_datetime', 'lpep_dropoff_datetime', 'day_of_week', 'day_of_month', 'hour_of_day', 'trip_duration']]"
    ]
   },
@@ -634,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "442dbb91-9428-4fbd-a1bc-7d192137e186",
    "metadata": {},
    "outputs": [
@@ -673,7 +708,7 @@
        "      <td>7.30</td>\n",
        "      <td>7.30</td>\n",
        "      <td>1.20</td>\n",
-       "      <td>6.083333</td>\n",
+       "      <td>6.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -681,7 +716,7 @@
        "      <td>43.30</td>\n",
        "      <td>43.30</td>\n",
        "      <td>13.69</td>\n",
-       "      <td>3.162893</td>\n",
+       "      <td>3.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -689,7 +724,7 @@
        "      <td>10.14</td>\n",
        "      <td>7.80</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>8.210526</td>\n",
+       "      <td>8.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -697,7 +732,7 @@
        "      <td>7.80</td>\n",
        "      <td>7.80</td>\n",
        "      <td>1.24</td>\n",
-       "      <td>6.290323</td>\n",
+       "      <td>6.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -705,7 +740,7 @@
        "      <td>8.30</td>\n",
        "      <td>8.30</td>\n",
        "      <td>1.10</td>\n",
-       "      <td>7.545455</td>\n",
+       "      <td>7.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -721,7 +756,7 @@
        "      <td>59.84</td>\n",
        "      <td>59.84</td>\n",
        "      <td>18.04</td>\n",
-       "      <td>3.317073</td>\n",
+       "      <td>3.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83687</th>\n",
@@ -729,7 +764,7 @@
        "      <td>25.87</td>\n",
        "      <td>22.21</td>\n",
        "      <td>5.56</td>\n",
-       "      <td>3.994604</td>\n",
+       "      <td>3.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83688</th>\n",
@@ -737,7 +772,7 @@
        "      <td>22.75</td>\n",
        "      <td>22.75</td>\n",
        "      <td>5.13</td>\n",
-       "      <td>4.434698</td>\n",
+       "      <td>4.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83689</th>\n",
@@ -745,7 +780,7 @@
        "      <td>54.12</td>\n",
        "      <td>54.12</td>\n",
        "      <td>12.58</td>\n",
-       "      <td>4.302067</td>\n",
+       "      <td>4.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83690</th>\n",
@@ -753,11 +788,11 @@
        "      <td>48.89</td>\n",
        "      <td>48.89</td>\n",
        "      <td>11.32</td>\n",
-       "      <td>4.318905</td>\n",
+       "      <td>4.32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>83691 rows × 5 columns</p>\n",
+       "<p>80236 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -775,29 +810,29 @@
        "83690        0.00         48.89              48.89          11.32   \n",
        "\n",
        "       fare_per_mile  \n",
-       "0           6.083333  \n",
-       "1           3.162893  \n",
-       "2           8.210526  \n",
-       "3           6.290323  \n",
-       "4           7.545455  \n",
+       "0               6.08  \n",
+       "1               3.16  \n",
+       "2               8.21  \n",
+       "3               6.29  \n",
+       "4               7.55  \n",
        "...              ...  \n",
-       "83686       3.317073  \n",
-       "83687       3.994604  \n",
-       "83688       4.434698  \n",
-       "83689       4.302067  \n",
-       "83690       4.318905  \n",
+       "83686           3.32  \n",
+       "83687           3.99  \n",
+       "83688           4.43  \n",
+       "83689           4.30  \n",
+       "83690           4.32  \n",
        "\n",
-       "[83691 rows x 5 columns]"
+       "[80236 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['total_without_tip'] = df['total_amount'] - df['tip_amount']\n",
-    "df['fare_per_mile'] = df['total_without_tip'] / df['trip_distance']\n",
+    "df['total_without_tip'] = round(df['total_amount'] - df['tip_amount'], 2)\n",
+    "df['fare_per_mile'] = round(df['total_without_tip'] / df['trip_distance'], 2)\n",
     "df[['tip_amount', 'total_amount', 'total_without_tip', 'trip_distance', 'fare_per_mile']]"
    ]
   },
@@ -819,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8a654418-a1bb-43ee-89f7-566192f72bbc",
    "metadata": {},
    "outputs": [],
@@ -844,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
