Utils function for opening the df and aggregating data

--- a/taxi_clean.ipynb
+++ b/taxi_clean.ipynb
@@ -859,7 +859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/taxi_clean.csv')"
+    "df.to_csv('data/taxi_clean.csv', index=False)"
    ]
   }
  ],
