Data cleaning, location analysis, etc. (#11)
* Utils function for opening the df and aggregating data

* Finish location analysis and fixed data cleaning. Reran all notebooks and attempt 2 to fix large data file issue

--- a/taxi_clean.ipynb
+++ b/taxi_clean.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import geopandas as gpd"
    ]
   },
   {
@@ -409,7 +410,7 @@
    "metadata": {},
    "source": [
     "## Dropping Unnecessary Columns\n",
-    "The following columns will not be used in our analysis and will be dropped: `ehail_fee`"
+    "Removing the `ehail_fee` column."
    ]
   },
   {
@@ -417,9 +418,344 @@
    "execution_count": 4,
    "id": "ced6e99e-9f4f-460f-a996-71392652e427",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>lpep_pickup_datetime</th>\n",
+       "      <th>lpep_dropoff_datetime</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>trip_type</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2021-07-01 00:30:52</td>\n",
+       "      <td>2021-07-01 00:35:36</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74</td>\n",
+       "      <td>168</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>7.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:25:36</td>\n",
+       "      <td>2021-07-01 01:01:31</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>116</td>\n",
+       "      <td>265</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.69</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>43.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:05:58</td>\n",
+       "      <td>2021-07-01 00:12:00</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>10.14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:41:40</td>\n",
+       "      <td>2021-07-01 00:47:23</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>7.80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:51:32</td>\n",
+       "      <td>2021-07-01 00:58:46</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>244</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>8.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2021-07-01 00:05:00</td>\n",
+       "      <td>2021-07-01 00:11:50</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>239</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>15.05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:57:14</td>\n",
+       "      <td>2021-07-01 01:27:43</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>75</td>\n",
+       "      <td>243</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:27:36</td>\n",
+       "      <td>2021-07-01 00:32:35</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>6.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:29:09</td>\n",
+       "      <td>2021-07-01 00:34:18</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>10.38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-07-01 00:41:33</td>\n",
+       "      <td>2021-07-01 00:49:24</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID lpep_pickup_datetime lpep_dropoff_datetime store_and_fwd_flag  \\\n",
+       "0         1  2021-07-01 00:30:52   2021-07-01 00:35:36                  N   \n",
+       "1         2  2021-07-01 00:25:36   2021-07-01 01:01:31                  N   \n",
+       "2         2  2021-07-01 00:05:58   2021-07-01 00:12:00                  N   \n",
+       "3         2  2021-07-01 00:41:40   2021-07-01 00:47:23                  N   \n",
+       "4         2  2021-07-01 00:51:32   2021-07-01 00:58:46                  N   \n",
+       "5         1  2021-07-01 00:05:00   2021-07-01 00:11:50                  N   \n",
+       "6         2  2021-07-01 00:57:14   2021-07-01 01:27:43                  N   \n",
+       "7         2  2021-07-01 00:27:36   2021-07-01 00:32:35                  N   \n",
+       "8         2  2021-07-01 00:29:09   2021-07-01 00:34:18                  N   \n",
+       "9         2  2021-07-01 00:41:33   2021-07-01 00:49:24                  N   \n",
+       "\n",
+       "   RatecodeID  PULocationID  DOLocationID  passenger_count  trip_distance  \\\n",
+       "0           1            74           168                1           1.20   \n",
+       "1           1           116           265                2          13.69   \n",
+       "2           1            97            33                1           0.95   \n",
+       "3           1            74            42                1           1.24   \n",
+       "4           1            42           244                1           1.10   \n",
+       "5           1            24           239                1           1.90   \n",
+       "6           1            75           243                1           0.00   \n",
+       "7           1            82            82                1           0.66   \n",
+       "8           1            74            42                1           1.72   \n",
+       "9           1            41            42                1           1.37   \n",
+       "\n",
+       "   fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0          6.0   0.50      0.5        0.00           0.0   \n",
+       "1         42.0   0.50      0.5        0.00           0.0   \n",
+       "2          6.5   0.50      0.5        2.34           0.0   \n",
+       "3          6.5   0.50      0.5        0.00           0.0   \n",
+       "4          7.0   0.50      0.5        0.00           0.0   \n",
+       "5          8.0   3.25      0.5        3.00           0.0   \n",
+       "6         17.5   0.50      0.5        0.00           0.0   \n",
+       "7          5.0   0.50      0.5        0.00           0.0   \n",
+       "8          7.0   0.50      0.5        2.08           0.0   \n",
+       "9          7.5   0.50      0.5        0.00           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  payment_type  trip_type  \\\n",
+       "0                    0.3          7.30             2          1   \n",
+       "1                    0.3         43.30             2          1   \n",
+       "2                    0.3         10.14             1          1   \n",
+       "3                    0.3          7.80             2          1   \n",
+       "4                    0.3          8.30             2          1   \n",
+       "5                    0.3         15.05             1          1   \n",
+       "6                    0.3         18.80             2          1   \n",
+       "7                    0.3          6.30             2          1   \n",
+       "8                    0.3         10.38             1          1   \n",
+       "9                    0.3          8.80             2          1   \n",
+       "\n",
+       "   congestion_surcharge  \n",
+       "0                  0.00  \n",
+       "1                  0.00  \n",
+       "2                  0.00  \n",
+       "3                  0.00  \n",
+       "4                  0.00  \n",
+       "5                  2.75  \n",
+       "6                  0.00  \n",
+       "7                  0.00  \n",
+       "8                  0.00  \n",
+       "9                  0.00  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = df.drop('ehail_fee', axis=1)"
+    "df_drops = df.drop('ehail_fee', axis=1)\n",
+    "df_drops.head(10)"
    ]
   },
   {
@@ -435,7 +771,7 @@
    "id": "cf4f18e3-2c25-4b29-bd31-789bb865beed",
    "metadata": {},
    "source": [
-    "Remove rows where the `trip_distance` is 0."
+    "Remove rows where the `trip_distance` is 0, or the `tip_amount` is negative. Because the majority of the data involves trips in July, we decided to remove any outlier data from other months."
    ]
   },
   {
@@ -453,8 +789,65 @@
     }
    ],
    "source": [
-    "print('Remove ' + str(len(df[df['trip_distance'] == 0])) + ' rows with a trip_distance of 0')\n",
-    "df = df[df['trip_distance'] > 0]"
+    "print('Remove ' + str(len(df_drops[df_drops['trip_distance'] == 0])) + ' rows with a trip_distance of 0')\n",
+    "df_rev1 = df_drops[df_drops['trip_distance'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "18936f35-d9fb-4454-bb23-b64fe40bb7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove 1 row(s) with a negative tip\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Remove ' + str(len(df_rev1[df_rev1['tip_amount'] < 0])) + ' row(s) with a negative tip')\n",
+    "df_rev2 = df_rev1[df_rev1['tip_amount'] >= 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5961c13c-68d5-43c9-aea3-6d46cfe7bec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove 16 rows for trips not in July\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Remove ' + str(len(df_rev2[df_rev2['lpep_pickup_datetime'].dt.month != 7])) + ' rows for trips not in July')\n",
+    "df_rev3 = df_rev2[df_rev2['lpep_pickup_datetime'].dt.month == 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8c3648a1-d773-4fff-9265-262dd6b88439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove 249 rows with a negative fare\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Remove ' + str(len(df_rev3[df_rev3['fare_amount'] <= 0])) + ' rows with a negative fare')\n",
+    "df_rev4 = df_rev3[df_rev3['fare_amount'] > 0]"
    ]
   },
   {
@@ -478,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "92e38095-17f8-4166-9b3b-e164d2074b0d",
    "metadata": {},
    "outputs": [
@@ -613,7 +1006,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80236 rows × 6 columns</p>\n",
+       "<p>79970 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -643,20 +1036,21 @@
        "83689            7         1920.0  \n",
        "83690            7         1560.0  \n",
        "\n",
-       "[80236 rows x 6 columns]"
+       "[79970 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['day_of_week'] = df['lpep_pickup_datetime'].dt.dayofweek\n",
-    "df['day_of_month'] = df['lpep_pickup_datetime'].dt.day\n",
-    "df['hour_of_day'] = df['lpep_pickup_datetime'].dt.hour\n",
-    "df['trip_duration'] = round((df['lpep_dropoff_datetime'] - df['lpep_pickup_datetime']).dt.total_seconds())\n",
-    "df[['lpep_pickup_datetime', 'lpep_dropoff_datetime', 'day_of_week', 'day_of_month', 'hour_of_day', 'trip_duration']]"
+    "df_add = df_rev4.copy()\n",
+    "df_add['day_of_week'] = df_add['lpep_pickup_datetime'].dt.dayofweek\n",
+    "df_add['day_of_month'] = df_add['lpep_pickup_datetime'].dt.day\n",
+    "df_add['hour_of_day'] = df_add['lpep_pickup_datetime'].dt.hour\n",
+    "df_add['trip_duration'] = round((df_add['lpep_dropoff_datetime'] - df_add['lpep_pickup_datetime']).dt.total_seconds())\n",
+    "df_add[['lpep_pickup_datetime', 'lpep_dropoff_datetime', 'day_of_week', 'day_of_month', 'hour_of_day', 'trip_duration']]"
    ]
   },
   {
@@ -669,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "442dbb91-9428-4fbd-a1bc-7d192137e186",
    "metadata": {},
    "outputs": [
@@ -792,7 +1186,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80236 rows × 5 columns</p>\n",
+       "<p>79970 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -822,26 +1216,18 @@
        "83689           4.30  \n",
        "83690           4.32  \n",
        "\n",
-       "[80236 rows x 5 columns]"
+       "[79970 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['total_without_tip'] = round(df['total_amount'] - df['tip_amount'], 2)\n",
-    "df['fare_per_mile'] = round(df['total_without_tip'] / df['trip_distance'], 2)\n",
-    "df[['tip_amount', 'total_amount', 'total_without_tip', 'trip_distance', 'fare_per_mile']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6a88ec9-bd41-491e-be9b-f8bb8eabde31",
-   "metadata": {},
-   "source": [
-    "For potential next steps, we would like to incorporate the data for taxi zones and performa analysis regarding location."
+    "df_add['total_without_tip'] = round(df_add['total_amount'] - df_add['tip_amount'], 2)\n",
+    "df_add['fare_per_mile'] = round(df_add['total_without_tip'] / df_add['trip_distance'], 2)\n",
+    "df_add[['tip_amount', 'total_amount', 'total_without_tip', 'trip_distance', 'fare_per_mile']]"
    ]
   },
   {
@@ -854,21 +1240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8a654418-a1bb-43ee-89f7-566192f72bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/taxi_clean.csv', index=False)"
+    "df_add.to_csv('data/taxi_clean.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a0c9977-d636-45f5-9bec-faa3595329a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
