Final changes to main notebook and added binder link

--- a/location_analysis.ipynb
+++ b/location_analysis.ipynb
@@ -399,6 +399,7 @@
     "total_pickups_geom = utils.merge_location_data(total_pickups, 'PULocationID', rename_dict = \n",
     "                                             {'the_geom':'PUGeom', 'zone': 'PUZone', 'borough': 'PUBorough'})\n",
     "total_pickups_none = total_pickups_geom.drop('PUGeom', axis=1)\n",
+    "total_pickups_none.to_csv('tables/total_pickups.csv', index=False)\n",
     "total_pickups_none.sort_values('Count', ascending=False).head(10)"
    ]
   },
@@ -407,7 +408,7 @@
    "id": "90c32e24-ec87-48bb-91b6-77b98068ea13",
    "metadata": {},
    "source": [
-    "The above result shows that Manhattan, Queens, and Brooklyn primarily had the most taxi pickups during the month of July in 2021. Looking at the counts, there does seem to be some high variance in the count, so we will plot a histogram of this data to observe further."
+    "Looking at the counts, there does seem to be some high variance in the count, with some locations having significantly more pickups than others, so we will plot a histogram of this data to observe further."
    ]
   },
   {
@@ -440,7 +441,8 @@
     "plt.title('Number of pickups in Different Taxi Zones')\n",
     "plt.xlabel('Number of Pickups')\n",
     "plt.ylabel('Number of Taxi Zones')\n",
-    "total_pickups_none['Count'].hist();\n",
+    "total_pickups_none['Count'].hist()\n",
+    "plt.savefig('figures/total_pickups_hist')\n",
     "print('Mean: ', total_pickups_none['Count'].mean(), ', SD: ',\n",
     "      total_pickups_none['Count'].std())"
    ]
@@ -616,6 +618,7 @@
     "total_dropoffs_geom = utils.merge_location_data(total_dropoffs, 'DOLocationID', rename_dict = \n",
     "                                             {'the_geom':'DOGeom', 'zone': 'DOZone', 'borough': 'DOBorough'})\n",
     "total_dropoffs_none = total_dropoffs_geom.drop('DOGeom', axis=1)\n",
+    "total_dropoffs_none.to_csv('tables/total_dropoffs.csv', index=False)\n",
     "total_dropoffs_none.sort_values('Count', ascending=False).head(10)"
    ]
   },
@@ -657,7 +660,8 @@
     "plt.title('Number of Dropoffs in Different Taxi Zones')\n",
     "plt.xlabel('Number of Dropoffs')\n",
     "plt.ylabel('Number of Taxi Zones')\n",
-    "total_dropoffs_none['Count'].hist();\n",
+    "total_dropoffs_none['Count'].hist()\n",
+    "plt.savefig('figures/total_dropoffs_hist')\n",
     "print('Mean: ', total_dropoffs_none['Count'].mean(), ', SD: ',\n",
     "      total_dropoffs_none['Count'].std())"
    ]
@@ -825,6 +829,7 @@
     "fare_per_mile_geom = utils.merge_location_data(fare_per_mile, 'PULocationID', rename_dict = \n",
     "                                             {'the_geom':'PUGeom', 'zone': 'PUZone', 'borough': 'PUBorough'})\n",
     "fare_per_mile_none = fare_per_mile_geom.drop('PUGeom', axis=1)\n",
+    "fare_per_mile_none.to_csv('tables/fare_per_mile_pickup.csv', index=False)\n",
     "fare_per_mile_none.sort_values('fare_per_mile', ascending=False).head(10)\n"
    ]
   },
@@ -983,6 +988,7 @@
     "fare_per_mile2_geom = utils.merge_location_data(fare_per_mile2, 'DOLocationID', rename_dict = \n",
     "                                             {'the_geom':'DOGeom', 'zone': 'DOZone', 'borough': 'DOBorough'})\n",
     "fare_per_mile_2none = fare_per_mile2_geom.drop('DOGeom', axis=1)\n",
+    "fare_per_mile_2none.to_csv('tables/fare_per_mile_dropoff.csv', index=False)\n",
     "fare_per_mile_2none.sort_values('fare_per_mile', ascending=False).head(10)"
    ]
   },
