--- a/main.ipynb
+++ b/main.ipynb
@@ -1380,7 +1380,7 @@
    "metadata": {},
    "source": [
     "### Fares Per Mile By Pickup and Dropoff Zone\n",
-    "Looking first at fare per mile amongst pickup locations, the cost per mile seem to range between $3 and $65 with a significant outlier existing at locationID 138, which is the LaGuardia Airport. This makes sense since busy airport traffic could cause prices to skyrocket even for fairly short trip distances, which would cause the cost per mile to be very large numbers"
+    "Looking first at fare per mile amongst pickup locations, the cost per mile seem to range between 3 and 65 with a significant outlier existing at locationID 138, which is the LaGuardia Airport. This makes sense since busy airport traffic could cause prices to skyrocket even for fairly short trip distances, which would cause the cost per mile to be very large numbers."
    ]
   },
   {
