--- a/main.ipynb
+++ b/main.ipynb
@@ -1776,7 +1776,7 @@
    "id": "2cc52ae3-2109-4b85-bc17-6b2785b16bca",
    "metadata": {},
    "source": [
-    "   Xingrui: My contribution included the \"busy_time_and_fares_analysis\" notebook contains my research on the busiest hour during a day and weekday vs weekends; and and how fares change over time. Added my narrative conclusion related to my analysis to the main notebook."
+    "   Xingrui: My contribution included the \"busy_time_and_fares_analysis\" notebook contains my research on the busiest hour during a day and weekday vs weekends; and and how fares change over time. Added my narrative conclusion related to my analysis to the main notebook; Also made the binder link and the LICENSE file for our project."
    ]
   },
   {
