--- a/tip_amt_prediction.ipynb
+++ b/tip_amt_prediction.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d6877fd7-3ee9-4e07-8741-0f549870df81",
+   "metadata": {},
+   "source": [
+    "# Tip Amounts Prediction Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0d72613b-e627-494e-91bf-01e6d0b15280",
